@@ -16,21 +16,34 @@ package org.apache.solr.handler.loader;
  * limitations under the License.
  */
 
+import java.io.FilterReader;
 import java.io.IOException;
 import java.io.Reader;
 import java.io.StringReader;
+import java.lang.reflect.Field;
+import java.nio.CharBuffer;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.Iterator;
+import java.util.LinkedHashMap;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
+import java.util.UUID;
 import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.concurrent.atomic.AtomicReference;
 
+import com.ctc.wstx.stax.FilteredStreamReader;
 import org.apache.commons.io.IOUtils;
+import org.apache.commons.io.input.TeeInputStream;
+import org.apache.solr.common.params.CommonParams;
 import org.apache.solr.common.params.SolrParams;
 import org.apache.solr.common.params.UpdateParams;
 import org.apache.solr.common.util.JsonRecordReader;
+import org.apache.solr.schema.SchemaField;
+import org.apache.solr.util.xslt.RecordingJSONParser;
+import org.noggit.CharArr;
 import org.noggit.JSONParser;
 import org.noggit.ObjectBuilder;
 import org.apache.solr.common.SolrException;
@@ -50,50 +63,49 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 
-
 /**
  * @since solr 4.0
  */
 public class JsonLoader extends ContentStreamLoader {
-  final static Logger log = LoggerFactory.getLogger( JsonLoader.class );
+  final static Logger log = LoggerFactory.getLogger(JsonLoader.class);
   private static final String CHILD_DOC_KEY = "_childDocuments_";
 
   @Override
   public String getDefaultWT() {
     return "json";
   }
-  
+
   @Override
   public void load(SolrQueryRequest req, SolrQueryResponse rsp,
-      ContentStream stream, UpdateRequestProcessor processor) throws Exception {
-    new SingleThreadedJsonLoader(req,rsp,processor).load(req, rsp, stream, processor);
+                   ContentStream stream, UpdateRequestProcessor processor) throws Exception {
+    new SingleThreadedJsonLoader(req, rsp, processor).load(req, rsp, stream, processor);
   }
 
-  
+
   static class SingleThreadedJsonLoader extends ContentStreamLoader {
-    
+
     protected final UpdateRequestProcessor processor;
     protected final SolrQueryRequest req;
     protected SolrQueryResponse rsp;
     protected JSONParser parser;
     protected final int commitWithin;
     protected final boolean overwrite;
-  
+
     public SingleThreadedJsonLoader(SolrQueryRequest req, SolrQueryResponse rsp, UpdateRequestProcessor processor) {
       this.processor = processor;
       this.req = req;
       this.rsp = rsp;
 
       commitWithin = req.getParams().getInt(UpdateParams.COMMIT_WITHIN, -1);
-      overwrite = req.getParams().getBool(UpdateParams.OVERWRITE, true);  
+      overwrite = req.getParams().getBool(UpdateParams.OVERWRITE, true);
     }
-  
+
     @Override
-    public void load(SolrQueryRequest req, 
-        SolrQueryResponse rsp, 
-        ContentStream stream, 
+    public void load(SolrQueryRequest req,
+        SolrQueryResponse rsp,
+        ContentStream stream,
         UpdateRequestProcessor processor) throws Exception {
-      
+
       Reader reader = null;
       try {
         reader = stream.getReader();
@@ -102,34 +114,32 @@ public class JsonLoader extends ContentStreamLoader {
           log.trace("body", body);
           reader = new StringReader(body);
         }
-  
-        parser = new JSONParser(reader);
-        this.processUpdate();
-      }
-      finally {
+
+        this.processUpdate(reader);
+      } finally {
         IOUtils.closeQuietly(reader);
       }
     }
-  
+
     @SuppressWarnings("fallthrough")
-    void processUpdate() throws IOException
-    {
+    void processUpdate(Reader reader) throws IOException {
       String path = (String) req.getContext().get("path");
       if(UpdateRequestHandler.DOC_PATH.equals(path) ||   "false".equals( req.getParams().get("json.command"))){
         String split = req.getParams().get("split");
         String[] f = req.getParams().getParams("f");
-        handleSplitMode(split,f);
+        handleSplitMode(split, f, reader);
         return;
       }
+      parser = new JSONParser(reader);
       int ev = parser.nextEvent();
       while( ev != JSONParser.EOF ) {
-        
+
         switch( ev )
         {
           case JSONParser.ARRAY_START:
             handleAdds();
             break;
-  
+
         case JSONParser.STRING:
           if( parser.wasKey() ) {
             String v = parser.getString();
@@ -167,7 +177,7 @@ public class JsonLoader extends ContentStreamLoader {
             break;
           }
           // fall through
-  
+
         case JSONParser.LONG:
         case JSONParser.NUMBER:
         case JSONParser.BIGNUMBER:
@@ -175,12 +185,12 @@ public class JsonLoader extends ContentStreamLoader {
         case JSONParser.NULL:
           log.info( "can't have a value here! "
               +JSONParser.getEventString(ev)+" "+parser.getPosition() );
-          
+
         case JSONParser.OBJECT_START:
         case JSONParser.OBJECT_END:
         case JSONParser.ARRAY_END:
           break;
-          
+
         default:
           log.info("Noggit UNKNOWN_EVENT_ID:"+ev);
           break;
@@ -190,27 +200,41 @@ public class JsonLoader extends ContentStreamLoader {
       }
     }
 
-    private void handleSplitMode(String split, String[] fields) throws IOException {
-      if(split == null) split = "/";
-      if(fields == null || fields.length ==0) fields = new String[]{"$FQN:/**"};
-      final boolean echo = "true".equals( req.getParams().get("echo"));
+    private void handleSplitMode(String split, String[] fields, final Reader reader) throws IOException {
+      if (split == null) split = "/";
+      if (fields == null || fields.length == 0) fields = new String[]{"$FQN:/**"};
+      final boolean echo = "true".equals(req.getParams().get("echo"));
+      final String srcField = req.getParams().get("srcField");
+      final boolean mapUniqueKeyOnly = req.getParams().getBool("mapUniqueKeyOnly",false);
+      if (srcField != null) {
+        if (!"/".equals(split))
+          throw new SolrException(SolrException.ErrorCode.BAD_REQUEST, "Raw data can be stored only if split=/");
+        parser = new RecordingJSONParser(reader);
+      } else {
+        parser = new JSONParser(reader);
+
+      }
+
       JsonRecordReader jsonRecordReader = JsonRecordReader.getInst(split, Arrays.asList(fields));
-      jsonRecordReader.streamRecords(parser,new JsonRecordReader.Handler() {
-        ArrayList docs =null;
+      jsonRecordReader.streamRecords(parser, new JsonRecordReader.Handler() {
+        ArrayList docs = null;
+
         @Override
         public void handle(Map<String, Object> record, String path) {
-          if(echo){
-            if(docs ==null) {
+          Map<String, Object> copy = getDocMap(record, parser, srcField, mapUniqueKeyOnly);
+
+          if (echo) {
+            if (docs == null) {
               docs = new ArrayList();
-              rsp.add("docs",docs);
+              rsp.add("docs", docs);
             }
-            docs.add(record);
+            docs.add(copy);
           } else {
             AddUpdateCommand cmd = new AddUpdateCommand(req);
             cmd.commitWithin = commitWithin;
             cmd.overwrite = overwrite;
-            cmd.solrDoc =  new SolrInputDocument();
-            for (Map.Entry<String, Object> entry : record.entrySet()) {
+            cmd.solrDoc = new SolrInputDocument();
+            for (Map.Entry<String, Object> entry : copy.entrySet()) {
               cmd.solrDoc.setField(entry.getKey(),entry.getValue());
             }
             try {
@@ -222,6 +246,37 @@ public class JsonLoader extends ContentStreamLoader {
         }
       });
     }
+
+    private Map<String, Object> getDocMap(Map<String, Object> record, JSONParser parser, String srcField, boolean mapUniqueKeyOnly) {
+      Map result = record;
+      if(srcField != null && parser instanceof RecordingJSONParser){
+        //if srcFIeld specified extract it out first
+        result = new LinkedHashMap(record);
+        RecordingJSONParser rjp = (RecordingJSONParser) parser;
+        result.put(srcField, rjp.getBuf());
+        rjp.resetBuf();
+      }
+      if(mapUniqueKeyOnly){
+        SchemaField sf = req.getSchema().getUniqueKeyField();
+        if(sf == null) throw new SolrException(SolrException.ErrorCode.BAD_REQUEST, "No uniqueKey specified in schema");
+        String df = req.getParams().get(CommonParams.DF);
+        if(df == null)throw new SolrException(SolrException.ErrorCode.BAD_REQUEST, "No 'df' specified in request");
+        Map copy = new LinkedHashMap();
+        String uniqueField = (String) record.get(sf.getName());
+        if(uniqueField == null) uniqueField = UUID.randomUUID().toString().toLowerCase(Locale.ROOT);
+        copy.put(sf.getName(),uniqueField);
+        if(srcField != null && result.containsKey(srcField)){
+          copy.put(srcField, result.remove(srcField));
+        }
+        copy.put(df, result.values());
+        result = copy;
+      }
+
+
+      return result;
+    }
+
+
 
     /*private void handleStreamingSingleDocs() throws IOException
     {
@@ -352,18 +407,18 @@ public class JsonLoader extends ContentStreamLoader {
 
 
 
-    
+
     RollbackUpdateCommand parseRollback() throws IOException {
       assertNextEvent( JSONParser.OBJECT_START );
       assertNextEvent( JSONParser.OBJECT_END );
       return new RollbackUpdateCommand(req);
     }
-  
+
     void parseCommitOptions(CommitUpdateCommand cmd ) throws IOException
     {
       assertNextEvent( JSONParser.OBJECT_START );
       final Map<String,Object> map = (Map)ObjectBuilder.getVal(parser);
-  
+
       // SolrParams currently expects string values...
       SolrParams p = new SolrParams() {
         @Override
@@ -371,31 +426,31 @@ public class JsonLoader extends ContentStreamLoader {
           Object o = map.get(param);
           return o == null ? null : o.toString();
         }
-  
+
         @Override
         public String[] getParams(String param) {
           return new String[]{get(param)};
         }
-  
+
         @Override
         public Iterator<String> getParameterNamesIterator() {
           return map.keySet().iterator();
         }
       };
-  
+
       RequestHandlerUtils.validateCommitParams(p);
       p = SolrParams.wrapDefaults(p, req.getParams());   // default to the normal request params for commit options
       RequestHandlerUtils.updateCommit(cmd, p);
     }
-    
+
     AddUpdateCommand parseAdd() throws IOException
     {
       AddUpdateCommand cmd = new AddUpdateCommand(req);
       cmd.commitWithin = commitWithin;
       cmd.overwrite = overwrite;
-  
+
       float boost = 1.0f;
-      
+
       while( true ) {
         int ev = parser.nextEvent();
         if( ev == JSONParser.STRING ) {
@@ -431,7 +486,7 @@ public class JsonLoader extends ContentStreamLoader {
           if( cmd.solrDoc == null ) {
             throw new SolrException(SolrException.ErrorCode.BAD_REQUEST,"missing solr document. "+parser.getPosition() );
           }
-          cmd.solrDoc.setDocumentBoost( boost ); 
+          cmd.solrDoc.setDocumentBoost( boost );
           return cmd;
         }
         else {
@@ -441,8 +496,8 @@ public class JsonLoader extends ContentStreamLoader {
         }
       }
     }
-  
-  
+
+
     void handleAdds() throws IOException
     {
       while( true ) {
@@ -458,15 +513,15 @@ public class JsonLoader extends ContentStreamLoader {
         processor.processAdd(cmd);
       }
     }
-  
-  
+
+
     int assertNextEvent(int expected ) throws IOException
     {
       int got = parser.nextEvent();
       assertEvent(got, expected);
       return got;
     }
-  
+
     void assertEvent(int ev, int expected) {
       if( ev != expected ) {
         throw new SolrException(SolrException.ErrorCode.BAD_REQUEST,
@@ -518,14 +573,14 @@ public class JsonLoader extends ContentStreamLoader {
         sif.setValue(val, 1.0f);
       }
     }
-  
+
     private void parseExtendedFieldValue(SolrInputField sif, int ev)  throws IOException {
       assert ev == JSONParser.OBJECT_START;
-  
+
       float boost = 1.0f;
       Object normalFieldValue = null;
       Map<String, Object> extendedInfo = null;
-  
+
       for (;;) {
         ev = parser.nextEvent();
         switch (ev) {
@@ -538,7 +593,7 @@ public class JsonLoader extends ContentStreamLoader {
                   ev != JSONParser.BIGNUMBER ) {
                 throw new SolrException(SolrException.ErrorCode.BAD_REQUEST, "boost should have number! "+JSONParser.getEventString(ev) );
               }
-  
+
               boost = (float)parser.getDouble();
             } else if ("value".equals(label)) {
               normalFieldValue = parseNormalFieldValue(parser.nextEvent());
@@ -553,7 +608,7 @@ public class JsonLoader extends ContentStreamLoader {
               extendedInfo.put(label, val);
             }
             break;
-  
+
           case JSONParser.OBJECT_END:
             if (extendedInfo != null) {
               if (normalFieldValue != null) {
@@ -564,14 +619,14 @@ public class JsonLoader extends ContentStreamLoader {
               sif.setValue(normalFieldValue, boost);
             }
             return;
-  
+
           default:
             throw new SolrException(SolrException.ErrorCode.BAD_REQUEST, "Error parsing JSON extended field value. Unexpected "+JSONParser.getEventString(ev) );
         }
       }
     }
-  
-  
+
+
     private Object parseNormalFieldValue(int ev) throws IOException {
       if (ev == JSONParser.ARRAY_START) {
         List<Object> val = parseArrayFieldValue(ev);
@@ -581,8 +636,8 @@ public class JsonLoader extends ContentStreamLoader {
         return val;
       }
     }
-  
-  
+
+
     private Object parseSingleFieldValue(int ev) throws IOException {
       switch (ev) {
         case JSONParser.STRING:
@@ -604,11 +659,11 @@ public class JsonLoader extends ContentStreamLoader {
           throw new SolrException(SolrException.ErrorCode.BAD_REQUEST, "Error parsing JSON field value. Unexpected "+JSONParser.getEventString(ev) );
       }
     }
-  
-  
+
+
     private List<Object> parseArrayFieldValue(int ev) throws IOException {
       assert ev == JSONParser.ARRAY_START;
-  
+
       ArrayList lst = new ArrayList(2);
       for (;;) {
         ev = parser.nextEvent();
