@@ -122,7 +122,7 @@ New Features
   (hossman)
 
 * SOLR-6485: ReplicationHandler should have an option to throttle the speed of
-  replication (Varun Thacker, NOble Paul)
+  replication (Varun Thacker, Noble Paul)
 
 * SOLR-6543: Give HttpSolrServer the ability to send PUT requests (Gregory Chanan)
 
@@ -156,6 +156,9 @@ New Features
 
 * SOLR-5992: add "removeregex" as an atomic update operation
   (Vitaliy Zhovtyuk via Erick Erickson)
+
+* SOLR-6633: /update/json/docs path can now save the underlying json doc as a string field
+  and better support added to the default example (Noble Paul)
 
 Bug Fixes
 ----------------------
